# PDC_labki

laba_1/: CMakeLists.txt  task_1.cpp  task_2.cpp
laba_2/: CMakeLists.txt  DataPacket.h  Task.h  task_1.cpp  task_2.cpp
laba_3/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  server.cpp  server.hpp
laba_4/: CMakeLists.txt
laba_4/include/: power_array.hpp  rotate_image.hpp
laba_4/src/: main.cu  power_array.cu  rotate_image.cu
